Fix icon alignment.

--- a/root/static/css/userpages/UserPage.scss
+++ b/root/static/css/userpages/UserPage.scss
@@ -613,3 +613,8 @@ body {
     padding: 2px 8px;
     font-size: 12px;
 }
+
+
+.ia-issue .octicon-issue-opened {
+    margin-left: -2px;
+}
